--- a/2022-05-17/인라인 자바스크립트 활용하기(onclick 자바스크립트 이벤트).html
+++ b/2022-05-17/인라인 자바스크립트 활용하기(onclick 자바스크립트 이벤트).html
@@ -7,6 +7,54 @@
     <title>인라인 자바스크립트 활용하기(onclick 자바스크립트 이벤트)</title>
 </head>
 <body>
-    
+    인라인 자바스크립트 활용하기(onclick 자바스크립트 이벤트)
+
+
+    ■ 자바스크립트 이전 페이지로 이동하는 방법 : history.go(), history.back()
+
+
+    histroy.go(-1);
+    // 이전 페이지... 즉 한단계 뒤로 돌아가기
+
+
+    histroy.go(-2);
+    // 두단계 이전의 페이지로 이동
+
+
+    histroy.go(-3);
+    // 세단계 이전의 페이지로 이동
+
+
+    history.back();
+    // history.go(-1)과 동일한 기능
+
+
+    history.forward();
+    // history.go(1)과 동일하며 앞으로 이동
+
+
+    ■ HTML에 적용하기
+
+
+
+
+    현재 탭
+
+
+    DIV\
+    새로운 탭
+
+
+    DIV\
+    <a href="javascript:history.back()">뒤로 이동</a>
+    <a href="javascript:history.forward()">앞으로 이동</a>
+    <button onclick="javascript:history.back()">뒤로 이동</button>
+
+
+    <a href="javascript:location.reload()">새로고침</a>
+    <a href="javascript:window.close()">창닫기</a>
+    다음사이트 바로가기</button>
+
+
 </body>
 </html>
