--- a/2022-06-07/section2/유효성 체크 애니메이션 로그인폼.html
+++ b/2022-06-07/section2/유효성 체크 애니메이션 로그인폼.html
@@ -12,7 +12,7 @@
     
     <section class="login">
         <img src="images/logo-favicon.png" alt="CodingWorks Logo">
-        <h1>CodingWorks Logo</h1>
+        <h1>CodingWorks Login</h1>
         <form action="">
             <div class="input-field">
                 <input type="email" id="userid" autocomplete="off" required><span>USER EMAIL</span>
@@ -36,15 +36,15 @@
     <script>
         // var userId = $('#userid');
         // var userPw = $('#userpw');
-        // var loginBtn = $('#user-btn');
+        // var loginBtn = $('#login-btn');
 
         // var $userId = $('#userid');
         // var $userPw = $('#userpw');
-        // var $loginBtn = $('#user-btn');
+        // var $loginBtn = $('#login-btn');
 
         var userId = $('#userid'),
             userPw = $('#userpw'),
-            loginBtn = $('#user-btn');
+            loginBtn = $('#login-btn');
 
         loginBtn.click(function(){
             if(userId.val() == '') {
